--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg": "^7.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-instagram-embed": "^1.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
