--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-hot-loader": "^4.8.7",
     "rimraf": "^2.6.3",
     "style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-middleware": "^3.7.0",
