--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "babel-node server/app.js",
-    "clean": "rimraf node_modules && rimraf dist && npm install",
+    "clean": "rimraf node_modules && rimraf dist",
     "webpack:dev": "cross-env NODE_ENV=development webpack --config ./webpack/webpack.config.dev.js",
     "webpack:prod": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.prod.js",
     "build": "rimraf dist && npm run webpack:dev && npm run start",
@@ -45,7 +45,6 @@
     "eslint-plugin-react": "^7.13.0",
     "file-loader": "^4.2.0",
     "json-loader": "^0.5.7",
-    "nodemon": "^1.19.0",
     "react-hot-loader": "^4.8.7",
     "rimraf": "^2.6.3",
     "style-loader": "^1.0.0",
