--- a/server/package.json
+++ b/server/package.json
@@ -16,18 +16,14 @@
     "lint": "eslint client server; exit 0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bookshelf": "^0.14.2",
-    "classnames": "^2.2.6",
     "compression": "^1.7.4",
-    "connected-react-router": "^6.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^5.0.0-alpha.7",
     "helmet": "^3.18.0",
-    "history": "^4.9.0",
     "http-status-codes": "^1.3.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -36,50 +32,16 @@
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
-    "nomad-tribe-client": "file:client",
     "path": "^0.12.7",
     "pg": "^7.12.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-instagram-embed": "^1.5.0",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^3.2.9",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.9.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-function-bind": "^7.2.0",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
-    "@hot-loader/react-dom": "^16.8.6",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.2.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.13.0",
-    "file-loader": "^4.2.0",
-    "json-loader": "^0.5.7",
     "nodemon": "^1.19.0",
-    "react-hot-loader": "^4.8.7",
-    "rimraf": "^2.6.3",
-    "style-loader": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-hot-middleware": "^2.25.0"
+    "rimraf": "^2.6.3"
   },
   "browserslist": {
     "production": [
